# Vitaliy-Avdoshkin-vitaliy_avdoshkin_CourseWork_5

./: .gitignore  README.md  config.py  main.py  pyproject.toml
src/: db_class.py  get_vacancy.py  utils.py
